Fix issue with cors download track. Increase amount of track on mobile

--- a/frontend/src/pages/Main/components/Tracks/styles.module.scss
+++ b/frontend/src/pages/Main/components/Tracks/styles.module.scss
@@ -5,6 +5,10 @@
     .track {
         margin-bottom: setUnit(20);
 
+        @media screen and (max-width: #{setUnit($mobile)}){
+            margin-bottom: setUnit(15);
+        }
+
         &:last-child {
             margin-bottom: 0;
         }
